[tool.poetry]
name = "mitch_test_grid"
version = "0.1.0"
description = ""
authors = ["Sean Aye <hello@seanaye.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.3"
scikit-image = "^0.17.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
mypy = "^0.790"
black = "^20.8b1"
pytest = "^6.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
